--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,9 @@
 <%- include('partials/header') -%>
+<div class="addPost">
+  <a class="fill" href="/profile">Return to Profile</a>
+  <a class="fill" href="/feed">Return to Feed</a>
+  <br><br><br><br>
+</div>
 <div>
   <div class="row justify-content-center mt-5">
     <div class="postContainer">
@@ -29,12 +34,6 @@
         </form>
         <%}%>
       </div>
-    </div>
-    
-    <div class="col-6 mt-5">
-      <a class="fill" href="/profile">Return to Profile</a>
-      <a class="fill" href="/feed">Return to Feed</a>
-      <br><br><br><br>
     </div>
   </div>
 </div>
