fixed profile media

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,7 +419,8 @@ input:-webkit-autofill:focus {
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .gridBox {
