--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,8 @@
 
 <%- include('partials/header') -%>
 <div class="fillBox">
+  <a class="fill" href="/feed">Feed</a>
   <a class="fill" href="/logout">Logout</a>
-  <a class="fill" href="/feed">Return to Feed</a>
 </div>
 <div class="container">
   <div class="row mt-5">
@@ -30,7 +30,7 @@
                   <input type="file" class="form-control" id="imageUpload" name="file">
                 </div>
                 <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
-              </form>z
+              </form>
             </div>
           </div>
       </div>
