--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <main class="container">
-  <div class="row justify-content-center">
-    <section class="col-6 mt-5">
+  <div class="createUserForm">
+    <section class="postBg">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
       <div class="alert alert-danger"><%= el.msg %></div>
       <% }) %> <% } %> <% if (locals.messages.info) { %> <%
