added post card style

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
-
+<div class="media-icons">
+    <i class="fab fa-facebook-f"></i>
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-heart-o"></i>
+</div>
 </body>
 </html>
