--- a/public/css/style.css
+++ b/public/css/style.css
@@ -384,7 +384,7 @@ input:-webkit-autofill:focus {
 /* INDEX BUTTONS */
 
 .fill {
-  width: 100%;
+  /* width: 100%; */
   font-size: 18px;
   font-weight: 200;
   letter-spacing: 1px;
@@ -739,3 +739,161 @@ header > h2 {
 .container {
   padding-top: 30px;
 }
+
+/* POST CARD */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: "Poppins", sans-serif; */
+}
+.outer {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #f2f2f200;
+}
+#switch:checked ~ .outer {
+  background: #092c3e00;
+}
+.content {
+  display: flex;
+  width: 60%;
+  padding: 15px;
+  background: #fff;
+  border-radius: 12px;
+  position: relative;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+#switch:checked ~ .outer .content {
+  background: #092c3e;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+}
+.outer .toggle {
+  position: absolute;
+  width: 40px;
+  height: 20px;
+  border-radius: 20px;
+  background: #092c3e;
+  right: 15px;
+  top: 13px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+#switch:checked ~ .outer .toggle {
+  background: #fff;
+}
+.outer .toggle .circle {
+  margin-left: 3px;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: #fff;
+  transition: all 0.3s ease;
+}
+#switch:checked ~ .outer .circle {
+  margin-left: 22px;
+  background: #092c3e;
+}
+.image-box {
+  height: 550px;
+  width: 60%;
+  border-radius: 12px;
+  padding: 3px;
+  background: #092c3e;
+}
+.image-box img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border: 3px solid #fff;
+  border-radius: 12px;
+  object-fit: contain;
+}
+#switch:checked ~ .outer .image-box {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  border: 2px solid #fff;
+}
+#switch:checked ~ .outer .image-box img {
+  border-color: transparent;
+}
+.content .details {
+  width: 40%;
+  margin: 10px 0 20px 20px;
+  color: #092c3e;
+}
+#switch:checked ~ .outer .details {
+  transition: 0.1s;
+  color: #fff;
+}
+.content .details .name {
+  font-size: 23px;
+  font-weight: 600;
+}
+.content .details .job {
+  font-size: 18px;
+  font-weight: 500;
+}
+.content .details p {
+  font-size: 15px;
+  margin-top: 6px;
+}
+.content button {
+  display: block;
+  margin-top: 16px;
+  outline: none;
+  border: none;
+  font-size: 17px;
+  padding: 6px 14px;
+  border-radius: 6px;
+  color: #fff;
+  cursor: pointer;
+  background: #092c3e;
+  transition: all 0.3s ease;
+}
+.content button:hover {
+  transform: scale(0.97);
+}
+#switch:checked ~ .outer button {
+  background: #fff;
+  color: #092c3e;
+}
+.media-icons {
+  position: absolute;
+  bottom: 16px;
+  right: 15px;
+  margin-top: 12px;
+  justify-content: flex-end;
+}
+.media-icons i {
+  display: inline-flex;
+  margin: 0 4px;
+  font-size: 16px;
+  color: #092c3e;
+  opacity: 0.7;
+  cursor: pointer;
+}
+.media-icons i:hover {
+  opacity: 1;
+}
+#switch:checked ~ .outer i {
+  color: #fff;
+  opacity: 1;
+}
+#switch {
+  display: none;
+}
+
+/* FOOTER */
+
+header,
+footer {
+  clear: both;
+}
+
+/* CLOUDS ANIMATION */
