fixing medi styles

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
-<div class="media-icons">
-    <i class="fab fa-facebook-f"></i>
-    <i class="fab fa-twitter"></i>
-    <i class="fab fa-heart-o"></i>
-</div>
+<!-- <div class="media-icons">
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-github"></i>
+    <i class="fab fa-instagram"></i>
+</div> -->
 </body>
 </html>
