--- a/public/css/style.css
+++ b/public/css/style.css
@@ -522,7 +522,8 @@ input:-webkit-autofill:focus {
   background: radial-gradient(circle at bottom, navy 0, black 100%);
   overflow: hidden;
   box-shadow: 0 20px 50px rgb(23, 32, 90);
-  border: 2px solid #2a3cad;
+  border-top: 2px solid #2a3cad;
+  border-bottom: 2px szolid #2a3cad;
   color: white;
   overflow: hidden;
 }
