--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
     <title>Pet Galactica</title>
 
     <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/style.scss" />
+    <link rel="stylesheet" href="/css/tformat.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,7 +57,7 @@
             <div class="space">
               <div class="stars1"></div>
               <div class="stars1"></div>
-              <div class="stars1"></div>
+              <!-- <div class="stars1"></div> -->
             </div>
             <!-- <img src="/images/bgbg.gif" /> -->
           </div>
