--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -74,4 +74,20 @@
     margin-bottom: 35px;
     margin-left: 4px;
   }
+  .content {
+    margin: 2px;
+    width: 100%;
+    display: block;
+  }
+  .outer {
+    width: 100%;
+  }
+  .image-box {
+    margin-top: 22px;
+    width: 100%;
+    height: 350px;
+  }
+  .details {
+    width: 300px;
+  }
 }
