--- a/views/post.ejs
+++ b/views/post.ejs
@@ -13,6 +13,7 @@
          <span class="circle"></span>
        </span>
      </label>
+     <div class="name"><%= post.title %></div>
      <div class="image-box">
        <img src="<%= post.image%>" />
      </div>
