cleaned up code

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -49,7 +49,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css"
     />
   </head>
-  <body>
+  <body onload="getPics()">
     <header class="container">
       <div class="text-center">
         <div class="titlu">
@@ -57,9 +57,7 @@
             <div class="space">
               <div class="stars1"></div>
               <div class="stars1"></div>
-              <!-- <div class="stars1"></div> -->
             </div>
-            <!-- <img src="/images/bgbg.gif" /> -->
           </div>
         </div>
       </div>
