--- a/public/css/style.css
+++ b/public/css/style.css
@@ -899,4 +899,18 @@ footer {
   clear: both;
 }
 
-/* CLOUDS ANIMATION */
+/* FULLPAGE POPUP*/
+
+#fullpage {
+  display: none;
+  position: absolute;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-size: contain;
+  background-repeat: no-repeat no-repeat;
+  background-position: center center;
+  background-color: black;
+}
