added comments section and finished with styles

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -57,6 +57,7 @@
             <div class="space">
               <div class="stars1"></div>
               <div class="stars1"></div>
+              <!-- <div class="stars1"></div> -->
             </div>
           </div>
         </div>
