--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -35,7 +35,18 @@
           </div>
       </div>
       <div class="col-6">
-        <h2> Previous Posts</h2>
+        <div class="postTitles">
+          <h5><span>Previous<br>POSTs</span></h5>
+	
+	        <div class="blobs_1"></div>
+	        <div class="blobs_2"></div>
+	        <div class="blobs_3"></div>
+	        <div class="blobs_4"></div>
+	        <div class="blobs_5"></div>
+	        <div class="blobs_6"></div>
+	        <div class="blobs_7"></div>
+        </div>
+        
         <ul class="gridBox">
           <% for(var i=0; i<posts.length; i++) {%>
           <li class="posted">
