--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,12 +193,14 @@ html {
 .col-6 {
   align-items: center;
   margin: auto;
-  width: 80%;
+  width: 100%;
   list-style: none;
+  margin-top: 35px;
 }
 
 .mt-5 > h2 {
   margin: auto;
+  margin-top: 15px;
   align-items: center;
 }
 
@@ -309,7 +311,7 @@ p {
   /* background: #250c49; */
   padding: 50px 100px;
   border: 2px solid rgb(0, 0, 0);
-  box-shadow: 15px 15px 1px #1c5253, 15px 15px 1px 2px rgba(0, 0, 0, 1);
+  box-shadow: 15px 15px 1px #aff8d8, 15px 15px 1px 2px rgba(0, 0, 0, 1);
 }
 
 .inputs {
@@ -371,14 +373,19 @@ input:-webkit-autofill:focus {
 }
 
 .dataBox {
+  margin: 4px;
   width: 400px;
   position: absolute;
-  /* top: 15px; */
+  top: 515px;
   right: 45px;
-  background: #115d76;
+  background: #c4f4f8;
   border: 2px solid rgba(0, 0, 0, 1);
-  box-shadow: 15px 15px 1px #e03e52, 15px 15px 1px 2px rgba(0, 0, 0, 1);
-  color: #fdfd96;
+  box-shadow: 15px 15px 1px #fdfd96, 15px 15px 1px 2px rgba(0, 0, 0, 1);
+  color: rgb(2, 4, 71);
+}
+
+.dataBox > p {
+  margin: 4px;
 }
 
 /* INDEX BUTTONS */
@@ -585,7 +592,7 @@ header > h2 {
   letter-spacing: 0.3em;
   color: rgb(255, 255, 255);
   text-shadow: 2px 2px black;
-  margin-top: 15px;
+  margin-top: 35px;
 }
 
 /* ANIMATED BACKGROUND */
@@ -600,7 +607,7 @@ header > h2 {
 .stars2,
 .stars3 {
   width: 444px;
-  height: 470px;
+  height: 440px;
   overflow: hidden;
   margin: auto;
   float: left;
@@ -720,20 +727,20 @@ header > h2 {
   border-bottom: 0.2rem solid #0892d0;
   /* border-radius: 2rem; */
   padding: 0.4em;
-  box-shadow: 0 0 0.2rem #0892d0, 0 0 0.2rem #0892d0, 0 0 2rem #bc13fe,
-    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+  box-shadow: 0 0 0.2rem #0892d0, 0 0 0.2rem #0892d0, 0 0 2rem #1d149c,
+    0 0 0.8rem #1d149c, 0 0 2.8rem #1d149c, inset 0 0 1.3rem #1d149c;
 }
 
 @keyframes pulsate {
   100% {
     box-shadow: 0 0 4px #0892d0, 0 0 11px #0892d0, 0 0 19px #0892d0,
-      0 0 40px #bc13fe, 0 0 80px #bc13fe, 0 0 90px #bc13fe, 0 0 100px #bc13fe,
-      0 0 150px #bc13fe;
+      0 0 40px #1d149c, 0 0 80px #1d149c, 0 0 90px #1d149c, 0 0 100px #1d149c,
+      0 0 150px #1d149c;
   }
 
   0% {
-    box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #bc13fe,
-      0 0 45px #bc13fe, 0 0 55px #bc13fe, 0 0 70px #bc13fe, 0 0 80px #bc13fe;
+    box-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #1d149c,
+      0 0 45px #1d149c, 0 0 55px #1d149c, 0 0 70px #1d149c, 0 0 80px #1d149c;
   }
 }
 
@@ -913,4 +920,146 @@ footer {
   background-repeat: no-repeat no-repeat;
   background-position: center center;
   background-color: black;
+}
+
+/* BUTTER */
+
+/* .butter {
+  font-size: 4rem;
+  text-shadow: 4px 4px 0px #3f7fbf00;
+  mix-blend-mode: screen;
+  animation: fadeIn 2.5s linear forwards;
+} */
+
+.postTitles {
+  width: 320px;
+  height: 320px;
+  transform: translate(-50%, -50%);
+}
+
+h5 {
+  background: #3f7fbf00;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  font-family: "Titan One", cursive;
+  font-size: 90px;
+  font-weight: 700;
+  flex-flow: row wrap;
+  align-content: center;
+  justify-content: center;
+}
+
+h5 {
+  width: 100%;
+  position: relative;
+}
+
+h5:before {
+  background: #3f7fbf00;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  content: "";
+  mix-blend-mode: screen;
+}
+
+[class*="blobs"] {
+  mix-blend-mode: color;
+  animation: blobs 15s ease-in-out infinite alternate;
+}
+
+.blobs_1 {
+  background: #ff1493;
+  width: 60px;
+  height: 60px;
+  top: 90px;
+  left: 210px;
+}
+
+.blobs_2 {
+  background: #ff4500;
+  width: 80px;
+  height: 80px;
+  top: 155px;
+  left: 230px;
+}
+
+.blobs_3 {
+  background: #00ff00;
+  width: 60px;
+  height: 60px;
+  top: 145px;
+  left: 20px;
+}
+
+.blobs_4 {
+  background: #ff0000;
+  width: 100px;
+  height: 100px;
+  top: 115px;
+  left: 100px;
+}
+
+.blobs_5 {
+  background: #ffff00;
+  width: 50px;
+  height: 50px;
+  top: 55px;
+  left: 70px;
+}
+
+.blobs_6 {
+  background: #00ffff;
+  width: 60px;
+  height: 60px;
+  top: 220px;
+  left: 55px;
+}
+
+.blobs_7 {
+  background: #ff8c00;
+  width: 50px;
+  height: 50px;
+  top: 210px;
+  left: 180px;
+}
+
+@keyframes blobs {
+  0% {
+    border-radius: 26% 74% 61% 39% / 54% 67% 33% 46%;
+  }
+  10% {
+    border-radius: 74% 26% 47% 53% / 68% 46% 54% 32%;
+  }
+  20% {
+    border-radius: 48% 52% 30% 70% / 27% 37% 63% 73%;
+  }
+  30% {
+    border-radius: 73% 27% 57% 43% / 28% 67% 33% 72%;
+  }
+  40% {
+    border-radius: 63% 37% 56% 44% / 25% 28% 72% 75%;
+  }
+  50% {
+    border-radius: 39% 61% 70% 30% / 61% 29% 71% 39%;
+  }
+  60% {
+    border-radius: 27% 73% 29% 71% / 73% 51% 49% 27%;
+  }
+  70% {
+    border-radius: 39% 61% 65% 35% / 74% 65% 35% 26%;
+  }
+  80% {
+    border-radius: 55% 45% 37% 63% / 38% 30% 70% 62%;
+  }
+  90% {
+    border-radius: 25% 75% 70% 30% / 39% 50% 50% 61%;
+  }
+  100% {
+    border-radius: 66% 34% 33% 67% / 65% 73% 27% 35%;
+  }
 }
