--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -1,13 +1,13 @@
 @media only screen and (max-width: 600px) {
   h1 {
     font-size: 2.7rem;
-    padding-top: 70px;
+    padding-top: 32px;
   }
   header > h2 {
-    font-size: 1.2rem;
+    font-size: 0.85rem;
   }
   .titlu {
-    height: 220px;
+    height: 160px;
   }
   .gridBox {
     grid-template-columns: none;
@@ -17,7 +17,7 @@
   }
   .addPost > .fill {
     margin: auto;
-    width: 60%;
+    width: 55%;
     font-size: 1rem;
   }
   .posted {
@@ -95,4 +95,7 @@
     width: 160px;
     height: 180px;
   }
+  /* .stars1 + .stars1 + .stars1 {
+    display: none;
+  } */
 }
