--- a/views/post.ejs
+++ b/views/post.ejs
@@ -18,6 +18,7 @@
      </div>
      <div class="details">
        <div class="name"><%= post.title %></div>
+       
        <div class="job">Likes: <%= post.likes %></div>
        <div class="buttons">
          <p><%= post.caption %></p>
@@ -25,6 +26,7 @@
          class="col-1"
          action="/post/likePost/<%= post.id %>?_method=PUT"
          method="POST"
+         singleLike=+1
        >
          <button class="buttonLikes" type="submit" <h3 class="likez">
           Like
@@ -42,6 +44,24 @@
        </form>
        <%}%>
        </div>
+       <div class="mt-5">
+        <h2>Add a comment</h2>
+        <form action="/comment/createComment/<%=post._id%>" method="POST">
+          <div class="mb-3">
+              <label for="comment" class="form-label">Comment</label>
+              <input type="text" class="form-control" id="comment" name="comment">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <ul>
+        <% for(var i=0; i<comments.length; i++) {%>
+          <li class="col-6 justify-content-between mt-5">
+            <%= comments[i].comment%>
+          </li>
+        <% } %>
+      </ul>
+    </div>
      </div>
    </div>
  </div>
