--- a/views/post.ejs
+++ b/views/post.ejs
@@ -57,7 +57,9 @@
       <ul>
         <% for(var i=0; i<comments.length; i++) {%>
           <li class="col-6 justify-content-between mt-5">
-            <%= comments[i].comment%>
+            <%= comments[i].comment %> By
+            <%= comments[i].user %>
+            <!-- <%= comments[i].createdAt %> -->
           </li>
         <% } %>
       </ul>
