fixed bubble set up

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,5 +65,7 @@
       <h1 class="cyber-text"><a href="/profile">Pet Galactica</a></h1>
       <h2>Welcome to the hottest Pet Social Network.</h2>
     </header>
+
+    <script src="/public/js/bubbles.js"></script>
   </body>
 </html>
