--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1064,4 +1064,37 @@ h5:before {
   }
 }
 
-/* BUBBLE CLOUD */
+/* COMMENTS */
+
+.box1 {
+  list-style-type: none;
+  width: 95%;
+  margin: 5px auto;
+  border: 4px solid #00bfb6;
+  padding: 20px;
+  text-align: center;
+  font-weight: 900;
+  color: #00bfb6;
+  font-family: arial;
+  position: relative;
+}
+
+.sb6:before {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 10px solid #00bfb6;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #00bfb6;
+  border-bottom: 10px solid transparent;
+  right: -20px;
+  top: 6px;
+}
+
+.commentUser {
+  float: right;
+  padding-bottom: 13px;
+  color: #00000079;
+  font-family: "space mono";
+}
