--- a/views/post.ejs
+++ b/views/post.ejs
@@ -55,9 +55,11 @@
       </div>
       <ul>
         <% for(var i=0; i<comments.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
+          <li class="box1 sb6">
             <%= comments[i].comment %> By
-            <%= comments[i].user %>
+            <a class="commentUser"">
+              <%= comments[i].user %>
+            </a>
             <!-- <%= comments[i].createdAt %> -->
           </li>
         <% } %>
