--- a/public/css/style.css
+++ b/public/css/style.css
@@ -766,7 +766,7 @@ header > h2 {
   background: #f2f2f200;
 }
 #switch:checked ~ .outer {
-  background: #092c3e00;
+  background: #55499400;
 }
 .content {
   display: flex;
@@ -781,12 +781,17 @@ header > h2 {
   background: #092c3e;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
 }
+#switch:checked ~ .outer .signUp {
+  --c2: #554994;
+  --c1: #f675a8;
+}
+
 .outer .toggle {
   position: absolute;
   width: 40px;
   height: 20px;
   border-radius: 20px;
-  background: #092c3e;
+  background: #554994;
   right: 15px;
   top: 13px;
   display: flex;
@@ -806,14 +811,14 @@ header > h2 {
 }
 #switch:checked ~ .outer .circle {
   margin-left: 22px;
-  background: #092c3e;
+  background: #554994;
 }
 .image-box {
   height: 550px;
-  width: 60%;
+  width: 100%;
   border-radius: 12px;
   padding: 3px;
-  background: #092c3e;
+  background: #554994;
 }
 .image-box img {
   height: 100%;
@@ -833,7 +838,7 @@ header > h2 {
 .content .details {
   width: 100%;
   margin: 10px 0 20px 20px;
-  color: #092c3e;
+  color: #554994;
 }
 #switch:checked ~ .outer .details {
   transition: 0.1s;
@@ -863,7 +868,7 @@ header > h2 {
   border-radius: 6px;
   color: #fff;
   cursor: pointer;
-  background: #092c3e;
+  background: #554994;
   transition: all 0.3s ease;
 }
 .content button:hover {
@@ -871,7 +876,7 @@ header > h2 {
 }
 #switch:checked ~ .outer button {
   background: #fff;
-  color: #092c3e;
+  color: #554994;
 }
 .media-icons {
   position: absolute;
@@ -884,7 +889,7 @@ header > h2 {
   display: inline-flex;
   margin: 0 4px;
   font-size: 16px;
-  color: #092c3e;
+  color: #554994;
   opacity: 0.7;
   cursor: pointer;
 }
@@ -1070,8 +1075,9 @@ h5:before {
   list-style-type: none;
   width: 95%;
   margin: 5px auto;
+  margin-top: 25px;
   border: 4px solid #00bfb6;
-  padding: 20px;
+  padding: 10px;
   text-align: center;
   font-weight: 900;
   color: #00bfb6;
@@ -1093,8 +1099,43 @@ h5:before {
 }
 
 .commentUser {
-  float: right;
-  padding-bottom: 13px;
-  color: #00000079;
+  /* float: right; */
+  margin-bottom: 2px;
+  color: #ccb3b379;
   font-family: "space mono";
+}
+
+.outer .signUp {
+  color: whitesmoke;
+  text-shadow: 2px 2px black;
+  -s: 5px; /* control the size */
+  --c1: #554994;
+  --c2: #f675a8;
+
+  --_g: var(--c2) 6% 14%, var(--c1) 16% 24%, var(--c2) 26% 34%,
+    var(--c1) 36% 44%, var(--c2) 46% 54%, var(--c1) 56% 64%, var(--c2) 66% 74%,
+    var(--c1) 76% 84%, var(--c2) 86% 94%;
+  background: radial-gradient(
+      33% 33% at 100% 0,
+      var(--c1) 4%,
+      var(--_g),
+      #0008 96%,
+      #0000
+    ),
+    radial-gradient(
+        33% 33% at 0 100%,
+        #0000,
+        #0008 4%,
+        var(--_g),
+        var(--c1) 96%
+      )
+      var(--c1);
+  /* background-size: var(--s) var(--s); */
+  box-shadow: none;
+}
+
+.commentTextu,
+.commentUser {
+  text-shadow: none;
+  text-shadow: 1px 1px black;
 }
