--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
 <div class="fillBox">
+  <a class="fill" href="/feed">MainPage</a>
   <a class="fill" href="/profile">Profile</a>
-  <a class="fill" href="/feed">Feed</a>
   <br><br><br><br>
 </div>
 <div class="container">
@@ -43,12 +43,15 @@
        </form>
        <%}%>
        </div>
-       <div class="mt-5">
+       <div class="signUp">
         <h2>Add a comment</h2>
         <form action="/comment/createComment/<%=post._id%>" method="POST">
-          <div class="mb-3">
+          <div>
               <label for="comment" class="form-label">Comment</label>
-              <input type="text" class="form-control" id="comment" name="comment">
+              <textarea type="text" class="form-control" id="comment" name="comment">
+
+              </textarea>
+              <!-- <input type="text" class="form-control" id="comment" name="comment"> -->
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
@@ -56,7 +59,10 @@
       <ul>
         <% for(var i=0; i<comments.length; i++) {%>
           <li class="box1 sb6">
-            <%= comments[i].comment %> By
+            <div class="commentTextu">
+              "<%= comments[i].comment %>"
+            </div>
+            
             <a class="commentUser"">
               <%= comments[i].user %>
             </a>
