--- a/public/css/style.css
+++ b/public/css/style.css
@@ -814,6 +814,9 @@ header > h2 {
   margin-left: 22px;
   background: #554994;
 }
+#switch:checked ~ .image-box {
+  background: #c4faf8;
+}
 .image-box {
   height: 550px;
   width: 100%;
@@ -937,139 +940,6 @@ footer {
   animation: fadeIn 2.5s linear forwards;
 } */
 
-.postTitles {
-  width: 320px;
-  height: 320px;
-  transform: translate(-50%, -50%);
-}
-
-h5 {
-  background: #3f7fbf00;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  font-family: "Titan One", cursive;
-  font-size: 90px;
-  font-weight: 700;
-  flex-flow: row wrap;
-  align-content: center;
-  justify-content: center;
-}
-
-h5 {
-  width: 100%;
-  position: relative;
-}
-
-h5:before {
-  background: #3f7fbf00;
-  width: 100%;
-  height: 100%;
-  display: block;
-  position: absolute;
-  content: "";
-  mix-blend-mode: screen;
-}
-
-[class*="blobs"] {
-  mix-blend-mode: color;
-  animation: blobs 15s ease-in-out infinite alternate;
-}
-
-.blobs_1 {
-  background: #ff1493;
-  width: 60px;
-  height: 60px;
-  top: 90px;
-  left: 210px;
-}
-
-.blobs_2 {
-  background: #ff4500;
-  width: 80px;
-  height: 80px;
-  top: 155px;
-  left: 230px;
-}
-
-.blobs_3 {
-  background: #00ff00;
-  width: 60px;
-  height: 60px;
-  top: 145px;
-  left: 20px;
-}
-
-.blobs_4 {
-  background: #ff0000;
-  width: 100px;
-  height: 100px;
-  top: 115px;
-  left: 100px;
-}
-
-.blobs_5 {
-  background: #ffff00;
-  width: 50px;
-  height: 50px;
-  top: 55px;
-  left: 70px;
-}
-
-.blobs_6 {
-  background: #00ffff;
-  width: 60px;
-  height: 60px;
-  top: 220px;
-  left: 55px;
-}
-
-.blobs_7 {
-  background: #ff8c00;
-  width: 50px;
-  height: 50px;
-  top: 210px;
-  left: 180px;
-}
-
-@keyframes blobs {
-  0% {
-    border-radius: 26% 74% 61% 39% / 54% 67% 33% 46%;
-  }
-  10% {
-    border-radius: 74% 26% 47% 53% / 68% 46% 54% 32%;
-  }
-  20% {
-    border-radius: 48% 52% 30% 70% / 27% 37% 63% 73%;
-  }
-  30% {
-    border-radius: 73% 27% 57% 43% / 28% 67% 33% 72%;
-  }
-  40% {
-    border-radius: 63% 37% 56% 44% / 25% 28% 72% 75%;
-  }
-  50% {
-    border-radius: 39% 61% 70% 30% / 61% 29% 71% 39%;
-  }
-  60% {
-    border-radius: 27% 73% 29% 71% / 73% 51% 49% 27%;
-  }
-  70% {
-    border-radius: 39% 61% 65% 35% / 74% 65% 35% 26%;
-  }
-  80% {
-    border-radius: 55% 45% 37% 63% / 38% 30% 70% 62%;
-  }
-  90% {
-    border-radius: 25% 75% 70% 30% / 39% 50% 50% 61%;
-  }
-  100% {
-    border-radius: 66% 34% 33% 67% / 65% 73% 27% 35%;
-  }
-}
-
 /* COMMENTS */
 
 .box1 {
@@ -1102,7 +972,8 @@ h5:before {
 .commentUser {
   /* float: right; */
   margin-bottom: 2px;
-  color: #ccb3b379;
+  text-shadow: 2px 2px black;
+  color: #ffffffa9;
   font-family: "space mono";
 }
 
@@ -1140,3 +1011,16 @@ h5:before {
   text-shadow: none;
   text-shadow: 1px 1px black;
 }
+
+.postTitles {
+  font-family: "Luckiest Guy", cursive;
+  letter-spacing: 0.4cap;
+  font-size: 1.6rem;
+  margin-top: 15px;
+  color: #ffefda;
+  text-shadow: 2px 2px black;
+}
+
+/* #switch:checked ~ .sb6 {
+  text-shadow: 2px 2px whitesmoke;
+} */
