--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -17,8 +17,11 @@
   }
   .addPost > .fill {
     margin: auto;
-    width: 55%;
-    font-size: 1rem;
+    width: 50%;
+    font-size: 1.3rem;
+  }
+  .addPostBox {
+    margin-top: 35px;
   }
   .posted {
     width: 90%;
@@ -50,12 +53,12 @@
   }
   .dataBox {
     margin-bottom: 30px;
-    width: 100%;
     margin: auto;
     padding-left: 25px;
     position: relative;
     padding-right: 0;
     right: 0;
+    top: 0;
     height: 3.4rem;
   }
   .dataBox > p {
@@ -68,9 +71,9 @@
   .fill {
     width: 42%;
     margin: auto;
-    font-size: 1rem;
     padding: 9px 35px 9px;
   }
+
   .postBg {
     margin-bottom: 35px;
     margin-left: 4px;
