--- a/views/post.ejs
+++ b/views/post.ejs
@@ -57,7 +57,7 @@
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
       </div>
-      <ul>
+      <ul class="commentGrid">
         <% for(var i=0; i<comments.length; i++) {%>
           <li class="box1 sb6">
             <div class="commentTextu">
