--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -63,7 +63,7 @@
             <div class="space">
               <div class="stars1"></div>
               <div class="stars1"></div>
-              <!-- <div class="stars1"></div> -->
+              <div class="stars1"></div>
             </div>
           </div>
         </div>
