--- a/views/post.ejs
+++ b/views/post.ejs
@@ -54,7 +54,7 @@
               </textarea>
               <!-- <input type="text" class="form-control" id="comment" name="comment"> -->
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="submitButton">Submit</button>
         </form>
       </div>
       <ul class="commentGrid">
