--- a/views/post.ejs
+++ b/views/post.ejs
@@ -44,7 +44,7 @@
        </form>
        <%}%>
        </div>
-       <div class="signUp">
+       <div class="signUp" id="tv">
         <h2>Add a comment</h2>
         <form action="/comment/createComment/<%=post._id%>" method="POST">
           <div>
