--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -47,16 +47,13 @@
     width: 100%;
   }
   .data {
-    width: 98%;
     position: relative;
     margin: auto;
   }
   .dataBox {
-    margin-bottom: 30px;
     margin: auto;
-    padding-left: 25px;
+    margin-bottom: 30px;
     position: relative;
-    padding-right: 0;
     right: 0;
     top: 0;
     height: 3.4rem;
@@ -100,7 +97,7 @@
     width: 160px;
     height: 180px;
   }
-  .details .signUp {
-    width: 100%;
+  #epic {
+    margin-top: 2%;
   }
 }
