--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta author="Giannis Tzonis" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Galactica</title>
 
