--- a/public/css/style.css
+++ b/public/css/style.css
@@ -394,7 +394,7 @@ input:-webkit-autofill:focus {
   font-size: 18px;
   font-weight: 200;
   letter-spacing: 1px;
-  padding: 13px 50px 13px;
+  padding: 9px 27px 9px;
   outline: 0;
   border: 1px solid black;
   cursor: pointer;
@@ -515,7 +515,6 @@ input:-webkit-autofill:focus {
 /* H1 */
 
 .cyber-text {
-  padding-bottom: 30px;
   margin: auto;
 }
 
@@ -534,6 +533,9 @@ input:-webkit-autofill:focus {
   border-bottom: 2px szolid #2a3cad;
   color: white;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 > a {
@@ -677,7 +679,6 @@ header > h2 {
   width: 100%;
   position: absolute;
   margin: auto;
-  top: 1.5cap;
   display: block;
 }
 
