--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 600px) {
   h1 {
-    font-size: 2.1rem;
-    padding-top: 32px;
+    font-size: 1.8rem;
   }
   header > h2 {
     font-size: 0.85rem;
@@ -64,12 +63,12 @@
     font-size: 0.8rem;
   }
   .fillBox {
-    width: 100%;
+    width: 95%;
   }
   .fill {
-    width: 42%;
     margin: auto;
-    padding: 9px 35px 9px;
+    padding: 9px 27px 9px;
+    font-size: 13px;
   }
 
   .postBg {
