--- a/public/css/style.css
+++ b/public/css/style.css
@@ -546,6 +546,7 @@ h1 > a {
 }
 
 h1 {
+  line-height: 500%;
   margin: auto;
   width: 100%;
   font-size: 6.2rem;
@@ -556,7 +557,7 @@ h1 {
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: #e7d27c;
-  text-shadow: 5.5px 5.5px #fb48c4, 20px 20px #000;
+  text-shadow: 5.5px 5.5px #fb48c4, 60px 60px #000;
   overflow: hidden;
   display: inline-block;
 
