--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <%- include('partials/navbar', {active: "Feed"}); %>
-<div class="addPost">
+<div class="fillBox">
   <a class="fill" href="/profile">Add a Post</a>
 </div>
 <div class="container">
