--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <div class="fillBox">
-  <a class="fill" href="/feed">MainPage</a>
+  <a class="fill" href="/feed">Home</a>
   <a class="fill" href="/profile">Profile</a>
   <br><br><br><br>
 </div>
