--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
 
 <%- include('partials/header') -%>
 <div class="fillBox">
-  <a class="fill" href="/feed">MainPage</a>
+  <a class="fill" href="/feed">Home</a>
   <a class="fill" href="/logout">Logout</a>
 </div>
 <div class="container">
