--- a/views/post.ejs
+++ b/views/post.ejs
@@ -17,7 +17,8 @@
        <img src="<%= post.image%>"/>
      </div>
      <div class="details">
-       <div class="name"><%= post.title %></div>
+       <div class="name"> "<%= post.title %>"</div>
+       <!-- <a href="<%= post.user %>"> <%= post.user %></a> -->
        
        <div class="job">Likes: <%= post.likes %></div>
        <div class="buttons">
