--- a/public/css/tformat.css
+++ b/public/css/tformat.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 796px) {
   h1 {
     font-size: 1.8rem;
   }
@@ -98,5 +98,11 @@
   }
   #epic {
     margin-top: 2%;
+  }
+}
+
+@media only screen and (min-device-width: 575px) and (max-device-width: 796px) {
+  .posted {
+    height: 500px;
   }
 }
