--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,8 +559,8 @@ h1 {
   letter-spacing: 0.1em;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: #e7d27c;
-  text-shadow: 5.5px 5.5px #fb48c4, 60px 60px #000;
+  -webkit-text-stroke-color: #fb48c4;
+  text-shadow: 15.5px 15.5px #e7d27c, 60px 60px #000;
   overflow: hidden;
   display: inline-block;
 
