--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -45,6 +45,7 @@
             Previous Posts
           </h2>
         </div>
+        <div class="previousP">
         <ul class="gridBox">
           <% for(var i=0; i<posts.length; i++) {%>
           <li class="posted">
@@ -55,6 +56,7 @@
           </li>
         <% } %>
         </ul>
+        </div>
       </div>  
     </div>
   </div>
